[package]
name = "fileshare_webserver"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Wicks <ryan@voyis.com>"]
description = "A tool for taking data form a port (network or serial) and retransmitting any data recieved on another medium."
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
clap = "2.33.3"