[package]
name = "fileshare_webserver"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Wicks <ryan@voyis.com>"]
description = "A tool for taking data form a port (network or serial) and retransmitting any data recieved on another medium."
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
clap = "2.33.3"
sanitize-filename = "0.2"
futures-util = "0.3"
uuid = { version = "0.8", features = ["v4"] }
actix-files = "0.5.0"